# mde-selectivity

./: .gitignore  LICENSE  README.md  architecture.py  augmentation.py  config.yaml.example  convert_mat_to_png.py  data.py  download-dataset.sh  evaluate.py  globals.py  loss.py  main.py  metrics.csv  metrics.py  metrics_experiments.csv  profile-epoch.py  pyproject.toml  resize_dataset.py  showcase.ipynb  train.py  train_selectivity.py
configs/: exp1.yaml  exp10.yaml  exp11-b.yaml  exp11-new-formula.yaml  exp11.yaml  exp12.yaml  exp13.yaml  exp14.yaml  exp15.yaml  exp16.yaml  exp17.yaml  exp18.yaml  exp2.yaml  exp3.yaml  exp4.yaml  exp5.yaml  exp6.yaml  exp7.yaml  exp8.yaml  exp9.yaml
